[package]
name = "servant"
version = "0.1.0"
authors = ["automan.yang <automanyang@gmail.com>"]
description = "Reserve the name."
repository = "https://github.com/automanyang/servant"
readme = "README.md"
keywords = ["rpc"]
categories = ["network-programming"]
license = "MIT"
# license-file = "LICENSE-MIT"
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
server = ["servant-macro/server"]
client = ["servant-macro/client"]
admin_entity = ["client", "server"]
factory_entity = ["client", "server"]
gateway_entity = ["client", "server"]

# default = ["default_gateway", "invoke"]
full = ["server", "client",
    "admin_entity", "factory_entity", "gateway_entity"]

[dependencies]
log = "^0.4.8"
servant-log = { version = "^0.1.0", path = "../servant-log" }
servant-codec = { version = "^0.1.0", path = "../servant-codec" }
servant-macro = { version = "^0.1.0", path = "../servant-macro", optional = true }
futures_codec = "^0.3.4"
futures = "^0.3.1"
serde = { version = "^1.0", features = ["derive"]}
bincode = { version = "^1.2.1" }
serde_json = {version = "^1.0.44" }
rusqlite = { version = "^0.21.0" }
# crossbeam-channel = { version = "^0.4.0" }
# lazy_static = "^1.4.0"

[dependencies.async-std]
# version = "^1.5"
path = "../../async-std-1.5.0"
features = ["default", "unstable"]
# git = 'https://github.com/stjepang/async-std'
# branch = 'new-scheduler'
